--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Shenshou Blog
 SEOTitle: 神兽的博客 | Shenshou Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
-description: "关于青龙白虎朱雀玄武 | 神兽 | 这里是 @H神兽 的个人博客，与你一起发现更大的世界。"
-keyword: "神兽, 青龙, 白虎, 朱雀, 玄武"
+description: "神兽卡丁毛豆房卡辅助，微信kbs668888"
+keyword: "神兽, 卡丁, 毛豆, 房卡, 辅助"
 url: "https://kbs668888.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
