--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Shenshou Blog
+title: 微信kbs668888
 SEOTitle: 神兽的博客 | Shenshou Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
