--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 微信kbs668888
-SEOTitle: 神兽的博客 | Shenshou Blog
+SEOTitle: 神兽卡丁毛豆
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
 description: "神兽卡丁毛豆房卡辅助，微信kbs668888"
